# pyBreezeChMS

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  DOCUMENTATION.md  README.md  README.rst  easytithe_importer.py  groups  project.config  pyproject.toml  requirements.txt  setup.py  setup.py.bak
.github/workflows/: test_distribution.yml
breeze/: breeze.py  utils.py
breeze_chms_api/: breeze.py  profile_helper.py
samples/: easytithe_importer.py
tests/: __init__.py  breeze_test.py  profile_helper_test.py
tests/test_files/: TestData.json  TestDataRef.json  profiles.json
